docs/tests/nameres/custom_types/invalid/InterfaceMemberAlreadyDefined.src
// Valid

interface Printable {
    let int print;
    fn void print(string msg);  // Already defined
}